# apps/api/openapi.json
@@ -100,6 +100,27 @@
         "responses": { "200": { "description": "" } },
         "tags": ["Issues"]
       }
+    },
+    "/api/v1/issues/{issueId}/audit": {
+      "get": {
+        "operationId": "IssuesController_listAudit",
+        "parameters": [
+          {
+            "name": "issueId",
+            "required": true,
+            "in": "path",
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "x-tenant-id",
+            "required": true,
+            "in": "header",
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": { "200": { "description": "" } },
+        "tags": ["Issues"]
+      }
     }
   },
   "info": {
